attempted fix for too wide hearder (at 640 and 480)

--- a/vufind/web/interface/themes/responsive/css/main.css
+++ b/vufind/web/interface/themes/responsive/css/main.css
@@ -5343,7 +5343,7 @@ a.badge:focus {
     #formatCategories {
         display: none;
     }
-    .container{
+    .navbar-static-top .container{
         width:620px;
 
     }
